Version 1.9:

(2014-03-09)
 * Add an option to record audio.

(2014-03-08)
 * Use the user's country for default region.

(2014-02-18)
 * Add two actions to increase or reduce the font size
   (shortcuts Ctrl+Plus and Ctrl+Minus).

(2014-01-23)
 * Add a patch to support AmigaOS4 by zzd10h:
   http://forum.smplayer.info/viewtopic.php?f=4&t=7081

(2014-01-17)
 * Add the Italian translation.

(2014-01-13)
 * Add the French translation.

(2013-12-05)
 * Add mpv to the list of players.

(2013-10-21)
 * Add an option to add URL to the SMPlayer playlist.

(2013-10-17)
 * Replace the 'Most Rated' tab with 'Sports'.

(2013-09-12)
 * Keys work now in the video list.

(2013-09-09)
 * Improve support for the encrypted signatures of Youtube.

(2013-08-30 - 2013-10-10)
 * Adapt the code for Qt 5.


Version 1.8:

(2013-08-05) 
 * New translations: Croatian, Bulgarian, Vietnamese and Indonesian.

(2013-08-03)
 * Bugfix: if the search term contained a non ascii character, the results
   from page 2 onwards were incorrect. This is fixed now.

(2013-07-21)
 * Ask the user to update the youtube code when an unknown signature is
   found.

(2013-07-15)
 * The quality for recording has now more options and allows to save the
   video in webm format as well.

(2013-07-14)
 * Possibility to select the playback quality (for players other than smplayer).

(2013-06-22 - 2013-07-12)
 * Add support for the new signatures of Youtube.

(2013-05-27)
 * Add options in the configuration dialog to select the preferred
   region and period of time for the standard feeds.


Version 1.7:

(2013-05-03)
 * Add the Czech translation, by Petr Šimáček (transifex).
 * Add the Malay translation, by abuyop (transifex).
 * Add the Swedish translation, by XC and Andreas Gustafsson (transifex).
 * Add the Turkish translation, by Emre FIRAT and Hasan Akgöz (transifex).
 * Add the Finnish translation, by Jiri Grönroos (transifex).
 * Add the Georgian translation, by George Machitidze (transifex).

(2013-04-20)
